# soorak-sam

./: .agent.md  .trace-cache.json  CMakeLists.txt  README.md  aspice_linkify.py  history.prompt.txt
.github/: copilot-instructions.md
.github/agents/: aspice-sup1.agent.md  aspice-sup9.agent.md
.github/hooks/: add-link-traceability.json  save-prompt.ps1
docs/: traceability-visualization.html
docs/MAN-3/: MAN3-PP-0001-project-plan.md
docs/SPL-2/: SPL2-BUILD-0001-build-environment.md  SPL2-FEAT-0001-feature-model.md  SPL2-REL-0001-release-note.md  SPL2-TRACE-0001-traceability-review.md
docs/SUP-1/: SUP1-QAR-0001-qa-audit-report.md
docs/SUP-10/: SUP10-CR-0001-change-request.md
docs/SUP-8/: SUP8-CI-LIST-0001-ci-baseline.md  SUP8-CMP-0001-cm-plan.md
docs/SUP-9/: SUP9-PRM-0001-problem-resolution.md
docs/SWE-1/: SWE-1-requirements.md  SWE1-TRACE-0001-traceability-review.md
docs/SWE-2/: SWE2-ARCH-0001-software-architecture.md  SWE2-TRACE-0001-traceability-review.md
docs/SWE-3/: SWE3-TRACE-0001-traceability-review.md  SWE3-UNIT-SPEC-0001-unit-design.md
docs/SWE-4/: SWE4-TC-SPEC-0001-unit-test.md  SWE4-TRACE-0001-traceability-review.md
docs/SWE-5/: SWE5-ITC-SPEC-0001-integration-test.md  SWE5-TRACE-0001-traceability-review.md
docs/SWE-6/: SWE6-QTC-SPEC-0001-qualification-test.md  SWE6-TRACE-0001-traceability-review.md
include/: .gitkeep
src/: AppController.cpp  AppController.h  Calculator.cpp  Calculator.h  InputParser.cpp  InputParser.h  main.c  main.cpp  types.h
tests/: CMakeLists.txt
tests/integration/: test_integration.cpp
tests/unit/: test_calculator.cpp  test_inputparser.cpp
